# MCI-05-provisionamento-de-aplicacoes

./: .gitignore  Makefile  README.md
apps/catalogo/: .gitignore  docker-compose.yml
apps/catalogo/backend/: Dockerfile  entrypoint.sh
apps/catalogo/backend/movies/: views.py
apps/catalogo/frontend/: Dockerfile
apps/todo/: docker-compose.yml
apps/todo/backend/: Dockerfile  manage.py  pyproject.toml
apps/todo/backend/tasks/: exceptions.py  models.py
apps/todo/frontend/: Dockerfile  nginx-spa.conf  package.json
apps/todo/nginx/: nginx.conf
aulas/01/: aula-01-passo-a-passo.md
aulas/02/: aula-02-exercicio.md  aula-02-passo-a-passo-catalogo.md  aula-02-passo-a-passo-todo.md
aulas/02/todo/backend/: Dockerfile  (+2 more)
aulas/03/: aula-03-exercicio.md  aula-03-passo-a-passo-catalogo.md  aula-03-passo-a-passo-todo.md
aulas/04/: aula-04-exercicio.md  aula-04-passo-a-passo-catalogo.md  aula-04-passo-a-passo-todo.md
aulas/05/: aula-05-exercicio.md  aula-05-passo-a-passo-todo.md
aulas/06/: aula-06-exercicio.md  aula-06-passo-a-passo-todo.md
aulas/07/: aula-07-exercicio.md  aula-07-passo-a-passo-todo.md
aulas/08/: aula-08-exercicio.md  aula-08-passo-a-passo-catalogo.md  aula-08-passo-a-passo-todo.md
aulas/08/catalogo/: .env.example  .env.production  docker-compose.yml
aulas/08/todo/: .env.example  .env.production  Makefile  docker-compose.yml
aulas/extras/: aula-extra-docker-swarm-load-balance.md  aula-extra-ssl-certificado-local.md  aula-extra-ssl-lets-encrypt.md
docs/: docker-cheatsheet.md
scripts/: README.md  install-wsl.ps1  pull_images.sh  setup.sh
(+49 files in other folders)
